syntax = "proto3";

package tm;

option go_package = "github.com/kercylan98/minotaur/engine/vivid/typed/tm";

message TypedMessage {
  int32 method_index = 1;
  string message_type_name = 2;
  bytes message_data = 3;
}