syntax = "proto3";
package remote;
option go_package = "/github.com/kercylan98/minotaur/core/transport";

service Service {
  rpc OnConnectionOpen (stream DistributedMessage) returns (stream DistributedMessage) {}
}

message DistributedMessage {
  oneof message_type {
    ConnectionOpened connection_opened = 1;
    ConnectionClosed connection_closed = 2;
    ConnectionMessage connection_message = 3;
  }
}

message ConnectionOpened {
  string Address = 1;
}

message ConnectionClosed {

}

message ConnectionMessage {
  string sender_address = 1;
  string receiver_address = 2;
  Message message = 3;
}

message Message {
  string type_name = 1;
  bytes message_data = 2;
}